menambahkan asset font pada yaml

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,11 +73,14 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+fonts:
+   - family: Roboto
+     fonts:
+       - asset: assets/fonts/Roboto_Condensed-Bold.ttf
+       - asset: assets/fonts/Roboto_Condensed-Reguler.ttf
+       - asset: assets/fonts/Roboto_Condensed-Medium.ttf
+       - asset: assets/fonts/Roboto_Condensed-Regular.ttf
+
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
