--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ flutter:
     - assets/images/Gamer.jpg
     - assets/images/Game On!.jpg
     - assets/images/Play.jpg
+    - assets/images/global.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
