--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ flutter:
     - assets/images/Game On!.jpg
     - assets/images/Play.jpg
     - assets/images/global.png
+    - assets/images/lg.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
