--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,13 @@ flutter:
     - assets/images/lg.png
     - assets/images/join.jpg
 
+    - assets/images/Game1.png
+    - assets/images/Game2.png
+    - assets/images/Game3.png
+    - assets/images/Game4.png
+    - assets/images/Game5.png
+    - assets/images/Game6.png
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
